After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 682465 - Login fails with [ Invalid UTF-8 ] and then hangs
Login fails with [ Invalid UTF-8 ] and then hangs
Status: RESOLVED FIXED
Product: gdm
Classification: Core
Component: general
3.5.x
Other Linux
: Normal normal
: ---
Assigned To: GDM maintainers
GDM maintainers
Depends on:
Blocks:
 
 
Reported: 2012-08-22 13:17 UTC by Cosimo Cecchi
Modified: 2012-09-07 04:56 UTC
See Also:
GNOME target: 3.6
GNOME version: ---


Attachments
video (681.72 KB, video/webm)
2012-08-22 13:18 UTC, Cosimo Cecchi
  Details
slave: fix autologin (1.23 KB, patch)
2012-09-06 22:23 UTC, Ray Strode [halfline]
committed Details | Review

Description Cosimo Cecchi 2012-08-22 13:17:33 UTC
I reproduce this bug with gdm 3.5.90

- Logout from a session
- Click on your user's icon
- Password prompt isn't even displayed, an "Invalid UTF-8" notification is shown at the bottom
- Click on the icon again
- GDM hangs

See attached video
Comment 1 Cosimo Cecchi 2012-08-22 13:18:08 UTC
Created attachment 222144 [details]
video
Comment 2 Cosimo Cecchi 2012-09-06 21:50:40 UTC
Still valid with 3.5.91
Comment 3 Ray Strode [halfline] 2012-09-06 22:23:17 UTC
I think this should fix the issue:
aafa407 slave: fix autologin

but please reopen if you continue to have problems.
Comment 4 Ray Strode [halfline] 2012-09-06 22:23:19 UTC
Created attachment 223716 [details] [review]
slave: fix autologin

An inverted condition in the wants_autologin function means we tried
to start greeter when autologin is runnings.

Since autologin is usually much faster than loading GL/gnome-shell, this bug
is sort of spotty to reproduce.

This commit changes the "delay > 0" check to "delay == 0" which is a
correct indicator of autologin.
Comment 5 Cosimo Cecchi 2012-09-07 04:56:03 UTC
Thanks, I confirm the patch seems to work fine here (but still doesn't solve bug 682467).